[tool.poetry]
name = "passwordchecker"
version = "0.1.0"
description = "Password validator using https://haveibeenpwned.com for Pycamp bootcamp 3rd project"
authors = ["Przemek Jeske <jeskenis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
requests-mock = "^1.9.3"
pylint = "^2.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
